# Math561

./: .ycm_extra_conf.py  CMakeLists.txt  GS_QR.c  HW4.c  HW4_a.c  MGS_QR.c  README.md  cblas_dsymv.c  make.sh  test.c  vector.c
HW/: Eig_QR.py  GMRES.py  GMRES_CG.py  Hess.c  Hess.py  MGS_QR.c  PP_LU.c
include/: MGS_QR.c  QR.h  debug.c  debug.h  dtrtri.c  lapack.h  least_square.h  matrix.c  matrix.h  show_out.c  showout.h  vector.h
source/: MGS_QR.c  least_square.c  matrix.c  vector.c
